fix: fix z-index, refactor

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
   transition: box-shadow 0.5s;
 
   &.sticky {
